            Fix issues with Class Extends
            Improve Tab Completions for extended classes

     2v00 : Allow changeInterval with large (>32 bit) intervals (fix #1438)
            changeInterval now changes the interval immediately when it's called inside the interval it is changing (fix #1440)
            Fix parsing of try..catch when not executing (fix #1439)
            Add extra ReferenceError checks, even if variable is not used
            Allow Ctrl-C out of while...continue loop (fix #1441)
            Fix bug if using an undefined member of an object for for..in (fix #1437)
            Allow for..in to iterate over prototype chains down from Array and Object
            Add for(var i of array) to iterate over elements
            Added getter and setter support
            Stop parsing blocks if not executing (fix #572)
            Fix stack overflow if interpreting a file full of '{' (fix #1448)
            Fix exception when performing record access on object from getter (fix #1454)
            Switch to non-recursive StringExt copy (fix #1451)
            Fix rounding errors in fillPoly -> improve vector font rendering
            Fix issue that caused 'dump()' not to report variables/functions on Pixl.js
            Add E.lookupNoCase to allow searching case-insensitively for Object keys
            Fix HTTP Chunked transfers when the server uses lowercase headers (fix #1458)
            Fix TypedArray.indexOf (fix #1468)
            Allow require('Storage').write('a','',0,15) (zero length data) (fix #1465)
            edit() now chooses the shortest way to describe the function
            Fixed bug when RegExp.match/test called on non-strings
            Added Global isFinite
            Add missing ArrayBufferView.filter
            Added Array.find and findIndex (also for ArrayBufferViews)
            Fix unreliable ArrayBufferView.indexOf (#1468)
            Added String.startsWith/endsWith/includes (#1302)