@@ -1,5 +1,6 @@
             Fix issues with Class Extends
             Improve Tab Completions for extended classes
+            Fix Storage.readJSON/readArrayBuffer memory leak (fix #1532)
 
      2v00 : Allow changeInterval with large (>32 bit) intervals (fix #1438)
             changeInterval now changes the interval immediately when it's called inside the interval it is changing (fix #1440)
